# swiftboot

./: .gitignore  Cargo.toml  README.md  bits32-I.json  bits64.json  make.bat
.cargo/: config.toml
bootloader/src/: disk.rs  main.rs
cargo-compile/: Cargo.toml
cargo-compile/src/: main.rs
kernel/: Cargo.toml
kernel/src/: main.rs
stage2/: Cargo.toml  build.rs
stage2/src/: debug.rs  disk.rs  gdt.rs  main.rs  mmap.rs  rsdp.rs  tss.rs  vbe.rs
stage3/src/: boot.rs  gdt.rs  main.rs  paging.rs  rsdp.rs  tss.rs
stage4/: Cargo.toml  linker.ld
stage4/src/: debug.rs  main.rs
